# Multiwfn

./: .gitignore  .multiwfn-upstream-manifest.json  0123dim.f90  ATTRIBUTION.txt  AdNDP.f90  CDA.f90  CDFT.f90  CMakeLists.txt  CONTRIBUTING.md  DOS.f90  EDA.f90  ETS_NOCV.f90  GUI.f90  LICENSE.txt  LSB.f90  Makefile  Makefile.local.example  Multiwfn.f90  Multiwfn.rc  PBC.f90  README.md  README.zh-CN.md  atmraddens.f90  basin.f90  bondorder.f90  cp2kmate.f90  define.f90  deloc_aromat.f90  excittrans.f90  fileIO.f90  function.f90  fuzzy.f90  grid.f90  hyper_polar.f90  orbcomp.f90  otherfunc.f90  otherfunc2.f90  otherfunc3.f90  plot.f90  population.f90  (+9 more)
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  other.yml  report.yml
.github/workflows/: build.yml  check-upstream.yml  core-source-guard.yml  gui-demo-release.yml  gui-linux-compat.yml  linux-optimization.yml  manual-conversion.yml  matterviz-gui.yml  performance.yml  track-upstream-source.yml
ci-results/linux-optimization/28704003039/: README.md
ci-results/linux-optimization/28704375376/: README.md
ci-results/linux-optimization/28704559815/: README.md
ci-results/linux-optimization/28704876591/: README.md
ci-results/linux-optimization/28704940791/: README.md
ci-results/linux-optimization/28705128326/: README.md
ci-results/linux-optimization/28705225328/: README.md
docs/: 3dmol_bond_order_display.md  3dmol_gui_adapter.md  agent-handoff-2026-07-13.md  build.md  gui_architecture.md  linux_optimization_experiments.md  manual_conversion.md  matterviz-control-protocol.md  matterviz-plot-protocol-v2.md  matterviz-rust-host-goal.md  matterviz-spectrum-log.md  matterviz-spectrum-todo.md  matterviz-updater-signing.md  matterviz-updater.md  matterviz-upstream-drafts.md  matterviz-volume-protocol.md  matterviz-volume-test-plan.md  matterviz-webview.md  performance.md  release.md  testing.md  upstream_tracking.md  visualization.md
docs/refactor/: BUILD.md  BUILD_ENV.md  DECISIONS.md  LICENSE_BOUNDARY.md  LOG.md  README.md  ROADMAP.md  VMD_BRIDGE.md  VMD_CUBE_EXPORT_AUDIT.md  VMD_STRUCTURE_EXPORT_AUDIT.md  gnu-build-env.yml
frontend/3dmol-viewer/: README.md  analysis-worker.js  app.js  bond-perception.js  cube-coordinates.js  esp-extrema-worker.js  esp-extrema.js  esp-scale.js  index.html  modern.css  styles.css
frontend/3dmol-viewer/tests/: analysis-worker.test.js  bond-perception.test.js  cube-coordinates.test.js  esp-extrema.test.js  esp-scale.test.js
frontend/matterviz-desktop/: Cargo.toml  tauri.conf.json
frontend/matterviz-desktop/capabilities/: default.json
frontend/matterviz-desktop/scripts/: validate-config.py
frontend/matterviz-desktop/src/: backend.rs  cli.rs  control_protocol.rs  control_transport.rs  file_dialog.rs  inherited_pipe.rs  lifecycle.rs  main.rs  memory_budget.rs  picker_protocol.rs  plot_protocol.rs  plot_store.rs  service.rs  session_data.rs  shutdown.rs  stream_broker.rs  transport.rs  updater.rs  volume_protocol.rs  volume_store.rs
frontend/matterviz-updater/: Cargo.toml  README.md
frontend/matterviz-updater/src/: lib.rs
frontend/matterviz-viewer/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
frontend/matterviz-viewer/src/: AnalysisPanel.svelte  App.svelte  EspLegend.svelte  FieldPlot2D.svelte  MultiwfnPlotView.svelte  PlotSceneView.svelte  SlicePanel.svelte  UpdateModal.svelte  ViewerInspector.svelte  analysis.ts  camera.ts  esp.ts  field.ts  iri-plot.ts  main.ts  manifest.ts  orbital.ts  periodic.ts  plot-export.ts  plot.ts  representation.ts  return.ts  scientific-plot.ts  slice-runtime.ts  slice.ts  startup.ts  state.ts  styles.css  update.ts  vite-env.d.ts  volume-cache.ts  volume.ts
frontend/matterviz-viewer/tests/: analysis.test.ts  camera.test.ts  esp.test.ts  iri-plot.test.ts  manifest.test.ts  native-structure.test.ts  orbital.test.ts  periodic.test.ts  plot-export.test.ts  plot-v2.test.ts  plot.test.ts  representation.test.ts  return.test.ts  scalar-grid-transfer.test.ts  (+10 more)
frontend/qt-multiwfn-gui/: README.md  qt_multiwfn_gui.py
noGUI/: GUI_3dmol.f90  GUI_empty.f90  GUI_matterviz.f90  dislin_d_empty.f90  dislin_mod_empty.f90  matterviz_plot_capture.f90  matterviz_spawn.c  plot_external_empty.f90
tests/: matterviz_plot_capture_harness.f90  progress_launcher_fixture.c  test_3dmol_server.py  test_gui_session_paths.py  test_matterviz_build_names.py  test_matterviz_plot_adapter.py  test_matterviz_server.py  test_matterviz_webview.py  test_multiwfn_analysis.py  test_multiwfn_gui_launcher.py  test_multiwfn_progress_launcher.py
tests/c/: run_matterviz_stream_test.sh  test_matterviz_control.c  test_matterviz_picker.c  test_matterviz_stream.c
tests/fixtures/: README.md  matterviz-volume-v1-orbital.cube  matterviz-volume-v1-orbital.hex  matterviz-volume-v1-orbital.json
tests/functional/: run_3dmol_cube_unit_test.sh  run_nogui_tests.sh
tests/linux/: test_matterviz_real_orbital.py
tests/matterviz-volume-e2e/: Cargo.toml  build.rs
tests/matterviz-volume-e2e/src/: lib.rs
tests/perf/: benchmark_multiwfn.py
tests/windows/: test_matterviz_async_launch.ps1
tools/: audit-gnu-smoke-stderr-smoke.sh  audit-gnu-smoke-stderr.sh  audit-helper-scripts.sh  audit-ignore-rules.sh  audit-nogui-build.sh  audit-smoke-residue.sh  audit-vmd-exports.sh  audit-vmd-structure-exports.sh  bootstrap-gnu-env.sh  gnu-build.sh  gnu-env-doctor.sh  gnu-nogui-smoke.sh  multiwfn_3dmol_file_dialog.py  multiwfn_3dmol_server.py  multiwfn_analysis.py  multiwfn_gui_launcher.py  multiwfn_matterviz_server.py  multiwfn_matterviz_webview.py  multiwfn_progress.py  multiwfn_progress_launcher.c  multiwfn_qt_gui.py  verify-refactor.sh  vmd-bridge-smoke.sh  vmd-doctor-smoke.sh  vmd-doctor.sh  vmd-open-scene-smoke.sh  vmd-open-scene.sh  vmd-scene-source-check.sh  vmd_bridge_smoke.f90
tools/fixtures/: he_minimal.mwfn
tools/manual/: convert_manual.py
tools/perf/: build_linux_variant.sh  run_grid_benchmark.py
tools/upstream/: check_multiwfn_release.py  import_multiwfn_source.py
(+7 files in other folders)
