[package]
name = "matterviz-desktop"
version = "0.1.0"
description = "Minimal Tauri desktop shell for the Multiwfn MatterViz frontend"
authors = ["Multiwfn contributors"]
edition = "2021"
rust-version = "1.88"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
url = "2"
serde_json = "1"
rfd = { version = "0.15", default-features = false, features = ["xdg-portal", "async-std"] }
socket2 = "0.6"
getrandom = "0.3"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Networking_WinSock"] }
