[package]
name = "matterviz-volume-e2e"
version = "0.0.0"
edition = "2021"
publish = false

[build-dependencies]
cc = "1"

[dependencies]
getrandom = "0.3"
libc = "0.2"
serde_json = "1"
socket2 = "0.6"
url = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Networking_WinSock",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_Pipes",
] }
